# strataquant

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  build.bat  build.sh  tatus  v0.4.0-testing-instructions.txt
src/: lib.rs  main.rs
src/backtest/: engine.rs  mod.rs  position_sizing.rs  result.rs  risk.rs  stops.rs  trade.rs  types.rs
src/data/: binance.rs  mod.rs  storage.rs  types.rs
src/metrics/: calmar.rs  drawdown.rs  mod.rs  sharpe.rs  sortino.rs
src/optimization/: mod.rs  sweep.rs  walkforward.rs
src/plotting/: mod.rs
src/strategies/: buy_and_hold.rs  mod.rs  sma_crossover.rs  trait.rs
