[package]
name = "strataquant"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.36", features = ["lazy", "parquet", "dtype-datetime"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }