[package]
name = "strataquant"
version = "0.5.1"
edition = "2021"
authors = ["Altug Tatlisu <altug@dslabs.network>"]
description = "Truth in crypto backtesting - Production-grade backtesting engine with honest metrics"
repository = "https://github.com/ChronoCoders/strataquant"
license = "MIT"
keywords = ["cryptocurrency", "backtesting", "trading", "bitcoin", "quantitative"]
categories = ["finance", "simulation"]

[dependencies]
polars = { version = "0.44", features = ["lazy", "parquet", "dtype-date"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
rayon = "1.10"
plotters = "0.3"

[lib]
name = "strataquant"
path = "src/lib.rs"

[[bin]]
name = "strataquant"
path = "src/main.rs"